--- a/main_recursion/main_recursion.vcxproj.filters
+++ b/main_recursion/main_recursion.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="maxElem_recursion.h">
       <Filter>Файлы ресурсов</Filter>
     </ClInclude>
+    <ClInclude Include="knight_recursion.h">
+      <Filter>Файлы ресурсов</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
